# libdlr

./: .readthedocs.yml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  clean  compile  pyproject.toml  setup.cfg
demo/: dlr_it_sc_test.f90  dlr_mf_sc_test.f90  sc_it.f90  sc_it_fit.f90  sc_mf.f90  syk_it.f90  syk_mf.f90  timetofreqtotime.f90
doc/: CMakeLists.txt  Makefile  background.rst  conf.py  dlr.rst  fortran_examples.rst  index.rst  install.rst  libdlr.rst  pydlr.rst  python_examples.ipynb  quickstart.rst  quickstart_python_notebook.ipynb  requirements.txt
doc/_doxygen_fortran/: CMakeLists.txt  Doxyfile
id_dist/: CMakeLists.txt  Makefile  size.txt
id_dist/development/: RUNME.sh  copy_final.sh  id_rand.f  id_rtrans.f  idd_frm.f  idd_house.f  idd_id.f  idd_id2svd.f  idd_qrpiv.f  idd_r_test.f  idd_sfft.f  idd_snorm.f  idd_svd.f  iddp_aid.f  iddp_asvd.f  iddp_rid.f  iddp_rsvd.f  iddr_aid.f  iddr_asvd.f  iddr_rid.f  iddr_rsvd.f  idz_frm.f  idz_house.f  idz_id.f  idz_id2svd.f  idz_qrpiv.f  idz_sfft.f  idz_snorm.f  idz_svd.f  idzp_aid.f  idzp_asvd.f  idzp_rid.f  idzp_rsvd.f  idzr_aid.f  idzr_asvd.f  idzr_rid.f  idzr_rsvd.f  make_src.sh  make_test.sh
id_dist/doc/: doc.ps
id_dist/src/: iddp_rsvd.f  idzp_rsvd.f
id_dist/test/: fort.13  id_rand_test.f  id_rtrans_test.f  idd_a_test.f  idd_frm_test.f  idd_house_test.f  idd_id2svd_test.f  idd_id_test.f  idd_qrpiv_test.f  idd_sfft_test.f  idd_snorm_test.f  idd_svd_test.f  iddp_aid_test.f  iddp_asvd_test.f  iddp_rid_test.f  iddp_rsvd_test.f  iddr_aid_test.f  iddr_asvd_test.f  iddr_rid_test.f  iddr_rsvd_test.f  idz_a_test.f  idz_frm_test.f  idz_house_test.f  idz_id2svd_test.f  idz_id_test.f  idz_qrpiv_test.f  idz_r_test.f  idz_sfft_test.f  idz_snorm_test.f  idz_svd_test.f  idzp_aid_test.f  idzp_asvd_test.f  idzp_rid_test.f  idzp_rsvd_test.f  idzr_aid_test.f  idzr_asvd_test.f  idzr_rid_test.f  idzr_rsvd_test.f
pydlr/: LICENSE  __init__.py  kernel.py  kernel_fortran.py  pydlr.py  pydlr_fortran.py  utils.py
pydlr/test/: benchmark_density_convergence.py  benchmark_dyson.py  demo_syk_model.py  test_barycentric.py  test_convergence.py  test_convolution.py  test_dimer.py  test_dyson.py  test_free_greens_function.py  test_gridding.py  test_kernel.py  test_lstqs.py  test_lstsq.py  test_semi_circ.py
src/: dlr_build.f90  dlr_conv.f90  dlr_dyson.f90  dlr_it.f90  dlr_kernels.f90  dlr_mf.f90  dlr_sr.f90  dlr_utils.f90  id_dist_sr.f  ir_sr.f90  kernels.f90  utils.f90
src/dlr_c/: dlr_c.f90  dlr_c.h
src/utils/: adapgaus.f  adapgaus2.f  adapgaus_quad.f  cadapgau.f
src/utils_external/: jacobi_rule.f90
src/utils_external/id_dist/: id_dist_qr.f  readme
src/utils_external/qlinpack/: qlinpack.f90  readme
test/: c_example.c  cmp_dlr_it_sc_test  cmp_dlr_mf_sc_test  conv_exp.f90  dlr_conv_test.f90  dlr_dyson_sc.f90  dlr_it_ha_test.f90  dlr_it_sc_test.f90  dlr_mf_ha_test.f90  dlr_mf_sc_test.f90  dyson_mat.f90  dyson_sc.f90  ha_it.c  ha_it.f90  ha_mf.f90  ip_exp.f90
