[metadata]
name = pydlr
version = 1.0.1
author = Hugo U.R. Strand
author_email = hugo.strand@gmail.com
description = Discrete Lehmann Representation for imaginary time calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasonkaye/libdlr
project_urls =
    Documentation = https://libdlr.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Intended Audience :: Science/Research
    
[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ./